crates/kernel/brioche-macro/tests/ui/fail_ui_type.stderr
error: Field `window` appears to contain a UI type. UI types are prohibited in BriocheExtensionType.
 --> tests/ui/fail_ui_type.rs:7:17
  |
7 |     pub window: TauriWindow,
  |                 ^^^^^^^^^^^

error[E0277]: the trait bound `BadState: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `for<'de> Deserialize<'de>` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `BadState` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
  = note: required for `BadState` to implement `DeserializeOwned`
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/kernel/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
...
  |     + serde::de::DeserializeOwned
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType`

error[E0277]: the trait bound `BadState: serde::Serialize` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `BadState` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/kernel/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
...
  |     + serde::Serialize
  |       ^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType`

error[E0277]: the trait bound `BadState: Default` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Default` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/kernel/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType:
  |           -------------------- required by a bound in this trait
...
  |     + Default
  |       ^^^^^^^ required by this bound in `BriocheExtensionType`

error[E0277]: the trait bound `TauriWindow: Clone` is not satisfied
 --> tests/ui/fail_ui_type.rs:7:5
  |
5 | #[derive(Clone, BriocheExtensionType)]
  |          ----- in this derive macro expansion
6 | pub struct BadState {
7 |     pub window: TauriWindow,
  |     ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `TauriWindow`
  |
help: consider annotating `TauriWindow` with `#[derive(Clone)]`
  |
3 + #[derive(Clone)]
4 | pub struct TauriWindow;
  |

error[E0277]: the trait bound `BadState: Default` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Default` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `EXT_ID`
 --> $WORKSPACE/crates/kernel/brioche-core/src/extension.rs
  |
  |     + Default
  |       ^^^^^^^ required by this bound in `BriocheExtensionType::EXT_ID`
...
  |     const EXT_ID: &'static str;
  |           ------ required by a bound in this associated constant

error[E0277]: the trait bound `BadState: serde::Serialize` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `BadState` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `EXT_ID`
 --> $WORKSPACE/crates/kernel/brioche-core/src/extension.rs
  |
  |     + serde::Serialize
  |       ^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType::EXT_ID`
...
  |     const EXT_ID: &'static str;
  |           ------ required by a bound in this associated constant

error[E0277]: the trait bound `BadState: serde::de::DeserializeOwned` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `for<'de> Deserialize<'de>` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
  = note: required for `BadState` to implement `DeserializeOwned`
note: required by a bound in `EXT_ID`
 --> $WORKSPACE/crates/kernel/brioche-core/src/extension.rs
  |
  |     + serde::de::DeserializeOwned
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType::EXT_ID`
...
  |     const EXT_ID: &'static str;
  |           ------ required by a bound in this associated constant

error[E0277]: the trait bound `BadState: serde::Serialize` is not satisfied
 --> tests/ui/fail_ui_type.rs:5:17
  |
5 | #[derive(Clone, BriocheExtensionType)]
  |                 ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `BadState` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `to_stdvec`
 --> $CARGO/postcard-$VERSION/src/ser/mod.rs
  |
  | pub fn to_stdvec<T>(value: &T) -> Result<std::vec::Vec<u8>>
  |        --------- required by a bound in this function
  | where
  |     T: Serialize + ?Sized,
  |        ^^^^^^^^^ required by this bound in `to_stdvec`
  = note: this error originates in the derive macro `BriocheExtensionType` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BadState: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Deserialize<'_>` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `BadState` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `brioche_core::postcard::from_bytes`
 --> $CARGO/postcard-$VERSION/src/de/mod.rs
  |
  | pub fn from_bytes<'a, T>(s: &'a [u8]) -> Result<T>
  |        ---------- required by a bound in this function
  | where
  |     T: Deserialize<'a>,
  |        ^^^^^^^^^^^^^^^ required by this bound in `from_bytes`

error[E0277]: the trait bound `BadState: Default` is not satisfied
 --> tests/ui/fail_ui_type.rs:6:12
  |
6 | pub struct BadState {
  |            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Default` is not implemented for `BadState`
 --> tests/ui/fail_ui_type.rs:6:1
  |
6 | pub struct BadState {
  | ^^^^^^^^^^^^^^^^^^^
